--- a/src/components/ordered-list/ordered-list.module.css
+++ b/src/components/ordered-list/ordered-list.module.css
@@ -2,7 +2,7 @@
   display: grid;
   gap: 0.5rem;
 
-  padding-inline-start: 2rem;
+  padding-inline: 2rem 1rem;
 
   > li {
     padding-inline-start: 0.5rem;
